apps/docs/content/docs/v2/e-commerce/gamehub.mdx
---
title: GameHub
---

import { Hr } from "@/components/hr"
import { Callout } from "@/components/callout"
import { EndpointDetails } from "@/components/endpoint-details"
import { TypeTable } from "next-docs-ui/components/type-table"

These endpoints allow you to retrieve all products, or a single product by its id. The response will be an array of JSON objects if you request all products, or a single JSON object if you request a single product.

## The GameHub model

<TypeTable
  type={{
    id: { type: "string", description: "The id of the product." },
    title: { type: "string", description: "The title of the product." },
    description: { type: "string", description: "The description of the product." },
    genre: { type: "string", description: "The genre of the product." },
    released: { type: "string", description: "The release date of the product." },
    ageRating: { type: "string", description: "The age rating of the product." },
    price: { type: "float", description: "The price of the product." },
    discountedPrice: { type: "float", description: "The discounted price of the product." },
    onSale: { type: "boolean", description: "Whether the product is on sale or not." },
    image: { type: "object", typeDescription: "Instance of `Media` model.", description: "The image of the product." },
    tags: { type: "Array<string>", description: "A string array of the tags of the product." },
    favorite: { type: "boolean", description: "Whether the product is a favorite or not." }
  }}
/>

<Hr />

## All products

<EndpointDetails path="/gamehub" />

Retrieve all products.

```json title="Response"
{
  "data": [
    {
      "id": "ded6041a-622f-4fb4-81e4-96fcfdad4dff",
      "title": "Ping Pong Championship",
      "description": "Enter the world of Ping Pong Championship and compete against the world's best to become the ultimate champion in this exciting game.",
      "genre": "Sports",
      "released": "2005",
      "ageRating": "3+",
      "price": 14.99,
      "discountedPrice": 4.79,
      "onSale": true,
      "image": {
        "url": "https://static.cloud.noroff.dev/api/gamehub/0-ping-pong-championship.jpg",
        "alt": "Ping Pong Championship logo on a blue background"
      },
      "tags": ["gamehub", "game"],
      "favorite": true
    },
    {
      "id": "2ace4e1d-cad7-4d35-8d59-6c9ac3e3eaf8",
      "title": "Super Duper",
      "description": "Celebrate some of the world's supe duper Superheroes with augmented reality.",
      "genre": "Adventure",
      "released": "2006",
      "ageRating": "3+",
      "price": 15.99,
      "discountedPrice": 15.99,
      "onSale": false,
      "image": {
        "url": "https://static.cloud.noroff.dev/api/gamehub/1-super-duper.jpg",
        "alt": "Super Duper logo on a yellow background"
      },
      "tags": ["gamehub", "game"],
      "favorite": true
    }
    // ...
  ],
  "meta": {
    "isFirstPage": true,
    "isLastPage": true,
    "currentPage": 1,
    "previousPage": null,
    "nextPage": null,
    "pageCount": 1,
    "totalCount": 2
  }
}
```

<Hr />

## Single product

<EndpointDetails path="/gamehub/<id>" />

Retrieve a single product by its id.

```json title="Response"
{
  "data": {
    "id": "ded6041a-622f-4fb4-81e4-96fcfdad4dff",
    "title": "Ping Pong Championship",
    "description": "Enter the world of Ping Pong Championship and compete against the world's best to become the ultimate champion in this exciting game.",
    "genre": "Sports",
    "released": "2005",
    "ageRating": "3+",
    "price": 14.99,
    "discountedPrice": 4.79,
    "onSale": true,
    "image": {
      "url": "https://static.cloud.noroff.dev/api/gamehub/0-ping-pong-championship.jpg",
      "alt": "Ping Pong Championship logo on a blue background"
    },
    "tags": ["gamehub", "game"],
    "favorite": true
  },
  "meta": {}
}
```
